<resources>
    <string name="app_name">FiitApp</string>
    <string name="title_activity_home">Fiit App</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Avanti</string>
    <string name="previous">Precedente</string>
    <string name="more">Opzioni</string>
    <string name="content_description_more">Vedi opzioni</string>
    <string name="search">Cerca</string>
    <string name="salva">Salva</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="content_description_search">Trova un paziente</string>
    <string name="visualizza">Visualizza</string>
    <string name="modifica">Modifica</string>
    <string name="log_in">LOG IN</string>
    <string name="log_out">LOG OUT</string>
    <string name="sign_up">REGISTRATI</string>
    <string name="img_profilo_utente">Profilo utente</string>
    <string name="img_logo">Logo Fiit</string>
    <string name="hp_ultimo_peso">Ultimo peso rilevato</string>
    <string name="ultime_rilev">Ultime misurazioni registrate</string>
    <string name="btn_rileva_peso">RILEVA PESO</string>
    <string name="hp_piano">Piano Alimentare</string>
    <string name="hp_diario">Diaro Settimanale</string>
    <string name="hp_obiettivo">Obiettivo Mensile</string>
    <string name="hp_approfondimenti">Approfondimenti</string>
    <string name="hp_nutrizionista">Home</string>
    <string name="titolo_lista">Home</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="pg_codice">Nuovo paziente</string>
    <string name="pg_pesatura">Dettaglio misurazioni</string>
    <string name="pg_diario">Diario settimanale</string>
    <string name="pg_obiettivo">Obiettivo paziente</string>
    <string name="pg_approfondimenti">Approfondimenti</string>
    <string name="pg_pianoalimentare">Piano alimentare</string>
    <string name="toast_codice">Codice copiato!</string>
    <string name="btn_copia_codice">COPIA CODICE</string>
    <string name="btn_vedi_dettagli">VEDI DETTAGLI</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="textview">TextView</string>
    <string name="non_sei_ancora_iscritto">Non sei ancora iscritto?</string>
    <string name="iscriviti_ora">Iscriviti ora</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="ricordami">Ricordami</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titoloDiario">Come è andata questa settimana?</string>
    <string name="btn_invia">Invia</string>
    <string name="testoDiario">Scrivi qui</string>
    <string name="lun">Lunedì</string>
    <string name="mar">Martedì</string>
    <string name="mer">Mercoledì</string>
    <string name="gio">Giovedì</string>
    <string name="ven">Venerdì</string>
    <string name="sab">Sabato</string>
    <string name="dom">Domenica</string>
    <string name="colazione">Colazione</string>
    <string name="pranzo">Pranzo</string>
    <string name="cena">Cena</string>
    <string name="spuntino">Spuntini</string>
    <string name="kg">Kg</string>
    <string name="modifica_obiettivo">Modifica obiettivo corrente</string>
    <string name="modifica_obiettivi">Modifica obiettivi correnti</string>
    <string name="dialog_messaggio">Vuoi salvare le modifiche prima di tornare indietro?</string>
    <string name="dialog_titolo">Modifiche non salvate</string>
    <string name="toast_save">Salvato con successo!</string>
    <string name="toast_error">Si è verificato un errore!</string>
    <string name="condividi_codice">Condividi Codice</string>
    <string name="titolo_lista_pazienti">Lista Pazienti</string>
    <string name="modifica_piano_alimentare">Modifica Piano Alimentare</string>
    <string name="visualizza_diario">Visualizza Diario</string>
    <string name="imposta_obiettivo_mensile">Imposta Obiettivo Mensile</string>
    <string name="nessun_inserimento">Nessun inserimento</string>
    <string name="copia_codice">Copia codice</string>
    <string name="lista_pazienti">Lista pazienti</string>
    <string name="mail_impostazioni">Mail</string>
    <string name="btn_salva">salva</string>
    <string name="btn_cancella_account">Cancella Account</string>
    <string name="btn_logout">Logout</string>
    <string name="app_info">App Info: v. 1.0</string>
    <string name="procedura_peso">1. Accendi la bilancia \n2. Sali sulla bilancia\n3. Clicca \'\'Rileva peso\'\'</string>
    <string name="title_rileva_peso">Rileva il tuo peso</string>
    <string name="title_piano_alimentare">Piano Alimentare</string>
    <string name="title_nuovo_account">Nuovo Account</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="conferma_password">Conferma password</string>
    <string name="btn_registrati">Registrati</string>
    <string name="radBtn_nutrizionista">Nutrizionista</string>
    <string name="radBtn_paziente">Paziente</string>
    <string name="btn_continua">Continua</string>
    <string name="dettagli_obiettivo">Dettagli obiettivo</string>
    <string name="indietro">Indietro</string>
    <string name="peso_da_perdere">Peso da perdere per obiettivo corrente</string>
    <string name="totale_kili_persi">Totale kili persi</string>
    <string name="obiettivo">Obiettivo</string>
</resources>