<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registrazioneToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green_primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test"
        app:titleTextColor="#FFFFFF"
        app:title="@string/title_nuovo_account"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8sp"
        android:paddingRight="8sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/reg_nome"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/black" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/reg_cognome"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/cognome"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="#FFFFFF" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/reg_mail"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="#FFFFFF" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/reg_password"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/reg_passwordConfirm"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/conferma_password"
                android:inputType="textPassword"
                android:textColor="@color/black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/conferma_registrazione"
                    android:layout_width="245dp"
                    android:layout_height="45dp"
                    android:layout_margin="18dp"
                    android:background="@drawable/login_shape"
                    android:text="@string/btn_registrati"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:backgroundTint="@color/purple_primary"
                    app:cornerRadius="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>





</LinearLayout>