<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMain"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/hp_obiettivo"
        app:navigationIcon="@drawable/ic_backarrow_24dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_ob_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:suffixText="@string/kg"
                android:hint="@string/modifica_obiettivo"
                app:startIconDrawable="@drawable/ic_edit_24dp"
                app:startIconContentDescription="@string/modifica"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:suffixTextAppearance="@style/TextAppearance.MaterialComponents.Headline4">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:layout_marginRight="8sp"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_marginBottom="16dp"
                android:text="@string/modifica_obiettivo"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_ob_mese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/modifica_obiettivi"
                android:layout_marginBottom="16dp"
                app:startIconDrawable="@drawable/ic_edit_24dp"
                app:startIconContentDescription="@string/modifica">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:layout_marginRight="8sp"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_primary"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    android:text="@string/salva"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="18sp"
                    app:cornerRadius="25dp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>