<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMain"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_backarrow_24dp"
        android:background="@color/green_primary"
        app:title="@string/hp_diario" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/titoloDiario"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/diarioCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/diarioTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/white"
                android:hint="@string/testoDiario"
                android:inputType="textMultiLine"
                android:lineSpacingExtra="12sp"
                android:maxHeight="1000sp"
                android:maxLines="3"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_inviaDiario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="18dp"
            android:backgroundTint="@color/green_primary"
            android:text="@string/btn_invia"
            android:textSize="18sp"
            app:cornerRadius="25dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDiarioPaz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clipToPadding="false"/>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>





</LinearLayout>