<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green_secondary"
    tools:context=".ActivityMain">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/intro_bkg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="230dp"
            android:layout_height="155dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/img_logo"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/insertName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/insertPass"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:visibility="visible" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/insertPass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:hint="@string/password"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/insertName"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/purple_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_main"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/log_in"
                android:textColor="@color/purple_primary"
                android:textSize="18sp"
                app:backgroundTint="#FFFFFF"
                app:cornerRadius="25dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_sei_ancora_iscritto"
                android:textSize="18dp"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/registration_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iscriviti_ora"
                android:textColor="#FFFFFF"
                android:textSize="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>


</FrameLayout>
