<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMain"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/pg_pesatura"
        app:navigationIcon="@drawable/ic_backarrow_24dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/purple_secondary">

                <TextView
                    android:id="@+id/textUltimoPeso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="0.0kg"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadline3"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/hp_ultimo_peso"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/ultime_rilev"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listaPesi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_anchorGravity="center"/>

            <TextView
                android:id="@+id/noInserimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nessun_inserimento"
                android:padding="16dp"
                android:visibility="invisible"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="?android:attr/textColorPrimary"/>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>